--- a/web/package.json
+++ b/web/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "vite && ts-node-dev --exit-child ../server/src/server.ts",
+    "build": "tsc && vite build && cd ../server/ && npm install && npm run dev",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "ts-node-dev": "^2.0.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
