--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite && ts-node --exit-child ../server/src/server.ts",
     "dev": "vite && ts-node-dev --exit-child ../server/src/server.ts",
     "build": "tsc && vite build && cd ../server/ && npm install && npm run dev",
     "preview": "vite preview"
@@ -12,7 +13,6 @@
     "@radix-ui/react-checkbox": "^1.0.0",
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-toggle-group": "^1.0.0",
-    "@types/axios": "^0.14.0",
     "axios": "^0.27.2",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
+    "@types/axios": "^0.14.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
